<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SameGlobe</string>
    <string name="start_button">Start</string>
    <string name="info_button">Info</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game_screen">GameScreen</string>
    <string name="title_setting_screens">Setting Screens</string>
    <string name="setting_colour_title">Number of Colors</string>
    <string name="setting_colour_sum">Set the Number of Colors</string>
    <string name="setting_colour_default">3</string>

    <string-array name="setting_colour_entries">
        <item>3 Farben</item>
        <item>4 Farben</item>
        <item>5 Farben</item>
    </string-array> 
    <string-array name="setting_colour_entries_value">
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="setting_difficulty_title">Difficulty</string>
    <string name="setting_difficulty_sum">Sets the Difficulty of the Game</string>
    <string name="setting_difficulty_default">2</string>

    <string-array name="setting_difficulty_entries">
        <item>Easy</item>
        <item>Normal</item>
        <item>Hard</item>
    </string-array>
    <string-array name="setting_difficulty_entries_value">
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="title_activity_score_screen">Highscore</string>
    <string name="score_screen_score">Your Points:</string>
    <string name="score_screen_color">Colors</string>
    
    <string name="title_activity_info_screen">Global Success Club Info</string>
    
    
    <string name="title_activity_advert_screen">Global Success Club Info</string>
    <string-array name="advert_screen_sentences">
        <item>Like us on Facebook.</item>
        <item>Follow us on Twitter.</item>
        <item>Join us for your global hop(e).</item>
    </string-array>
    <string name="score_button">Score</string>

</resources>